test/libyul/yulSyntaxTests/invalid/verbatim_leading_zero.yul
{
    let x := verbatim_01i_1o(hex"aa", 0)
}
// ----
// DeclarationError 4619: (15-30): Function "verbatim_01i_1o" not found.
// DeclarationError 3812: (6-42): Variable count mismatch for declaration of "x": 1 variables and 0 values.
